# Ignite

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE.txt  build.bat  deps.lua  gen-unix.sh  gen.bat  gen.sh  imgui.ini  premake5.lua  readme.md
editor/: CMakeLists.txt  ignite-editor.lua
editor/src/: editor_app.cpp  editor_camera.cpp  editor_camera.hpp  editor_layer.cpp  editor_layer.hpp  ipanel.hpp  render_target.cpp  render_target.hpp  scene_panel.cpp  scene_panel.hpp  states.hpp
editor/src/panels/: content_browser_panel.cpp  content_browser_panel.hpp  ipanel.hpp  scene_panel.cpp  scene_panel.hpp  sound_panel.cpp  sound_panel.hpp
engine/: CMakeLists.txt  ignite-engine.lua
engine/ignite/: CMakeLists.txt  ignite-engine.lua
engine/ignite/src/ignite/: ignite.hpp
engine/ignite/src/ignite/animation/: animation_system.cpp  animation_system.hpp  skeletal_animation.cpp  skeletal_animation.hpp
engine/ignite/src/ignite/asset/: asset.cpp  asset.hpp  asset_importer.cpp  asset_importer.hpp  asset_manager.cpp  asset_manager.hpp  asset_worker.cpp  asset_worker.hpp  mesh_source.cpp
engine/ignite/src/ignite/audio/: fmod_audio.cpp  fmod_audio.hpp  fmod_dsp.cpp  fmod_dsp.hpp  fmod_sound.cpp  fmod_sound.hpp  sound_cue.cpp  sound_cue.hpp
engine/ignite/src/ignite/core/: application.cpp  application.hpp  base.hpp  buffer.hpp  command.cpp  command.hpp  layer_stack.hpp  logger.hpp  platform_utils.cpp  platform_utils.hpp  string_utils.hpp  uuid.cpp  uuid.hpp
engine/ignite/src/ignite/graphics/: environment.cpp  environment.hpp  graphics_pipeline.cpp  graphics_pipeline.hpp  lighting.hpp  material.hpp  mesh.cpp  mesh.hpp  mesh_factory.hpp  mesh_loader.cpp  mesh_loader.hpp  model.cpp  model.hpp  render_target.cpp  render_target.hpp  renderer.cpp  renderer.hpp  renderer_2d.cpp  renderer_2d.hpp  scene_renderer.cpp  scene_renderer.hpp  shader.cpp  shader.hpp  shader_factory.cpp  shader_factory.hpp  texture.cpp  texture.hpp  vertex_data.hpp  window.cpp  window.hpp
engine/ignite/src/ignite/imgui/: gizmo.cpp  gizmo.hpp  gui_function.cpp  gui_function.hpp  imgui_layer.cpp  imgui_layer.hpp  imgui_nvrhi.cpp  imgui_nvrhi.hpp
engine/ignite/src/ignite/math/: aabb.hpp  frustum.cpp  frustum.hpp  math.hpp
engine/ignite/src/ignite/project/: project.cpp  project.hpp
engine/ignite/src/ignite/scene/: camera.cpp  camera.hpp  component.cpp  component.hpp  component_group.hpp  entity.hpp  icamera.cpp  icomponent.hpp  scene.cpp  scene.hpp  scene_manager.cpp  scene_manager.hpp  transform_system.cpp  transform_system.hpp
engine/ignite/src/ignite/scripting/: script_class.cpp  script_class.hpp  script_engine.cpp  script_engine.hpp  script_field.hpp  script_glue.cpp  script_instance.cpp
engine/ignite/src/ignite/serializer/: serializer.cpp  serializer.hpp
engine/scripting/: CMakeLists.txt
engine/scripting/src/: script_component.cpp
engine/src/ignite/: entry_point.hpp  ignite.hpp  pch.hpp
engine/src/ignite/animation/: animation_system.cpp  animation_system.hpp  keyframes.hpp  skeleton.hpp
engine/src/ignite/asset/: asset.hpp  asset_importer.cpp  asset_importer.hpp  mesh_source.hpp
engine/src/ignite/audio/: fmod_audio.cpp  fmod_audio.hpp  fmod_dsp.hpp  fmod_sound.cpp
engine/src/ignite/core/: application.cpp  application.hpp  base.hpp  layer.hpp  layer_stack.hpp  logger.cpp  logger.hpp  platform_utils.cpp  string_utils.hpp  time.hpp  types.hpp
engine/src/ignite/core/device/: device_manager.cpp  device_manager.hpp  device_manager_dx12.cpp  device_manager_dx12.hpp  device_manager_vk.cpp  device_manager_vk.hpp
engine/src/ignite/core/imgui/: imgui_layer.cpp  imgui_layer.hpp  imgui_nvrhi.cpp  imgui_nvrhi.hpp
engine/src/ignite/core/input/: app_event.hpp  event.hpp  input.cpp  input.hpp  joystick_codes.hpp  joystick_event.hpp  key_codes.hpp  key_event.hpp  mouse_codes.hpp  mouse_event.hpp
engine/src/ignite/core/vfs/: vfs.cpp  vfs.hpp
engine/src/ignite/graphics/: environment.cpp  graphics_pipeline.cpp  graphics_pipeline.hpp  image.hpp  lighting.cpp  material.hpp  mesh.cpp  mesh.hpp  mesh_factory.cpp  mesh_loader.cpp  mesh_loader.hpp  render_target.cpp  renderer.cpp  renderer.hpp  renderer_2d.cpp  renderer_2d.hpp  shader.cpp  shader.hpp  shader_factory.cpp  shader_factory.hpp  texture.cpp  texture.hpp  vertex_data.hpp  window.cpp  window.hpp
engine/src/ignite/graphics/ui/: widget.cpp
engine/src/ignite/imgui/: gizmo.cpp  imgui_layer.cpp  imgui_layer.hpp  imgui_nvrhi.cpp
engine/src/ignite/math/: aabb.hpp  math.cpp  obb.hpp
engine/src/ignite/physics/2d/: physics_2d.cpp  (+2 more)
engine/src/ignite/project/: project.cpp
engine/src/ignite/scene/: actor.hpp  camera.cpp  camera.hpp  component.hpp  component_group.hpp  entity.cpp  entity.hpp  entity_command_manager.hpp  entity_manager.cpp  entity_manager.hpp  icamera.hpp  icomponent.hpp  scene.cpp  scene.hpp  scene_camera.cpp  scene_camera.hpp  scene_manager.cpp  scene_manager.hpp
engine/src/ignite/scripting/: script_class.hpp  script_engine.cpp  script_glue.cpp  script_glue.hpp  script_instance.hpp
engine/src/ignite/serializer/: binary_serializer.hpp
engine/src/scripting/: CMakeLists.txt  base.hpp  iscript.cpp  iscript.hpp  script_component.cpp  script_component.hpp
src/: CMakeLists.txt
src/core/: application.cpp  application.hpp  device_manager.cpp  device_manager.hpp  device_manager_dx12.cpp  device_manager_dx12.hpp  irender_pass.cpp  irender_pass.hpp  layer.hpp  logger.hpp  main.cpp  string_utils.hpp
src/core/imgui/: imgui_nvrhi.cpp  imgui_nvrhi.hpp  imgui_renderer.cpp  imgui_renderer.hpp
src/editor/: ignite_editor_app.cpp  ignite_editor_app.hpp  imgui_render_pass.cpp  imgui_render_pass.hpp  ipanel.hpp  main.cpp  scene_panel.cpp  scene_panel.hpp  scene_render_pass.cpp  scene_render_pass.hpp
src/renderer/: shader_factory.cpp  shader_factory.hpp
src/scene/: scene.cpp
test/scripting/: CMakeLists.txt
test/scripting/game/: main.cpp
test/scripting/game_dll/: export.cpp  game.cpp
test/test_app/: CMakeLists.txt  test_app.lua
test/test_app/src/: app.cpp  test_layer.cpp  test_layer.hpp
(+95 files in other folders)
